loader align & default post item size fix

--- a/_dev/scss/main.scss
+++ b/_dev/scss/main.scss
@@ -328,16 +328,10 @@ aside {
 	}
 }
 .loader-container {
+  width: 100%;
 	height: 100vh;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
+  display: grid;
+  place-items: center;
 	.loader {
 		display: inline-block;
 		width: 64px;
